fixed user profile page visuals in dark mode

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -7743,7 +7743,6 @@ body.dark-theme .btn--warning {
 	margin: 12px auto;
 	padding-top: 20px;
 	padding-left: 10px;
-	background: #fff;
 	border: 1px solid #ddd;
 	box-shadow: 0 22px 35px -16px rgba(0, 0, 0, 0.1);
 }
